example-conf/ingresses/ingress-1g.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    ingress.neo9.io/enable-operator: "true"
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.neo9.io/allowed-visitors: neo9
    forecastle.stakater.com/expose: "true"
  name: demoingress1
  namespace: default
spec:
  rules:
  - host: demoingress1.dev-xmichel.neokube.neo9.pro
    http:
      paths:
      - backend:
          service:
            name: nginx-ingress-controller-default-backend
            port:
              number: 80
        path: /demo
        pathType: Prefix
