example-conf/ingresses/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    ingress.neo9.io/enable-operator: "true"
  annotations:
    kubernetes.io/ingress.class: alb
    ingress.neo9.io/allowed-visitors: neo9,customer
  name: albingress
  namespace: default
spec:
  rules:
  - host: albingress.dev-xmichel.neokube.neo9.pro
    http:
      paths:
      - backend:
          service:
            name: nginx-ingress-controller-default-backend
            port:
              number: 80
        path: /demo
        pathType: Prefix
