example-conf/ingresses/ingress-not-watch-on-annotation.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.1.9.1/32
  name: not-watched-ingress
  namespace: default
spec:
  rules:
  - host: xposer-not-watched-ingress.dev-xmichel.neokube.neo9.pro
    http:
      paths:
      - backend:
          service:
            name: nginx-ingress-controller-default-backend
            port:
              number: 80
        path: /demo
        pathType: Prefix
