example-conf/ingresses/ingress-watch-on-annotation.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.neo9.io/access-filtered: "true" # because xposer can't place labels on generated resource
    ingress.neo9.io/allowed-visitors: neo9
  name: watch-on-annotation
  namespace: default
spec:
  rules:
  - host: xposer-demoingress.dev-xmichel.neokube.neo9.pro
    http:
      paths:
      - backend:
          service:
            name: nginx-ingress-controller-default-backend
            port:
              number: 80
        path: /demo
        pathType: Prefix
