example-conf/ingresses/ingress-with-hardcoded-filter-and-groups.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.1.9.1/32
    ingress.neo9.io/allowed-visitors: neo9,customer
  name: with-hardcoded-filter-and-groups
  namespace: default
spec:
  rules:
  - host: harcoded-filter-group.dev-xmichel.neokube.neo9.pro
    http:
      paths:
      - backend:
          service:
            name: nginx-ingress-controller-default-backend
            port:
              number: 80
        path: /demo
        pathType: Prefix
