example-conf/ingresses/ingress-without-indication.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: without-indication
  namespace: default
spec:
  rules:
  - host: without-indication.dev-xmichel.neokube.neo9.pro
    http:
      paths:
      - backend:
          service:
            name: nginx-ingress-controller-default-backend
            port:
              number: 80
        path: /demo
        pathType: Prefix
